# learnOpenGL

./: .gitignore  CMakeLists.txt  README.md  configure.sh
basic/3d_world/: CMakeLists.txt  main.cpp
basic/hello_triangle/: hello_triangle.cpp
basic/hello_window/: CMakeLists.txt  hello_window.cpp
cmake/: 3rdparty_dependencies.cmake  utils.cmake
examples/3d_world/: CMakeLists.txt  main.cpp
examples/3d_world/shaders/: fragment.glsl  vertex.glsl
examples/camera/: CMakeLists.txt  main.cpp
examples/camera/shaders/: fragment.glsl  vertex.glsl
examples/hello_triangle/: CMakeLists.txt  Notes
examples/hello_window/: CMakeLists.txt  Notes  hello_window.cpp
utils/camera/: CMakeLists.txt  camera.cpp  camera.hpp
utils/oogl/: CMakeLists.txt
utils/oogl/include/oogl/: oogl.hpp  program_object.hpp  shader_object.hpp
utils/oogl/include/oogl/primitives/: shape.hpp  vertex.hpp
utils/oogl/src/: program_object.cpp  shader_object.cpp
utils/shader/: CMakeLists.txt  program_object.cpp  program_object.hpp  shader_object.cpp  shader_object.hpp  shader_util.cpp
utils/shape/: shape.hpp
utils/shape_generator/: CMakeLists.txt  shape_generator.cpp  shape_generator.hpp
utils/window/: CMakeLists.txt  window_utils.cpp  window_utils.hpp
